--- a/themes/SimpleComment/view/omeka/site/header.phtml
+++ b/themes/SimpleComment/view/omeka/site/header.phtml
@@ -1,7 +1,7 @@
 <?php
 $escape = $this->plugin('escapeHtml');
 $siteTitle = $site->title();
-$userBarComment = $this->userBarComment();
+$userBarComment = $this->userBar();
 ?>
 
 <div class="container">
