--- a/themes/SimpleComment/asset/css/comment.css
+++ b/themes/SimpleComment/asset/css/comment.css
@@ -7,7 +7,7 @@
     margin-bottom: 10px !important;
     border: 1px solid #edeff2;
     border-radius: 2px;
-    padding: 10px 70px;
+    padding: 10px 20px;
     border:1px solid #ffffff;
     margin-top: 10px !important;
 }
@@ -98,7 +98,6 @@
     font-size: 13px;
     line-height: 50px;
     font-weight: 400;
-    color: #b4b7c1;
     width: 100%;
     height: 50px;
     padding-left: 20px;
@@ -115,6 +114,11 @@
     height: 150px;
 }
 
+.but_comment {
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    padding: 6px 12px;
+}
 
 
 
