--- a/themes/SimpleComment/view/layout/layout.phtml
+++ b/themes/SimpleComment/view/layout/layout.phtml
@@ -7,6 +7,7 @@ $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1')
 $this->headTitle($siteTitle)->setSeparator(' · ');
 $this->headTitle()->append($this->setting('installation_title', 'Omeka S'));
 $this->headLink()->prependStylesheet($this->assetUrl('css/style.css'));
+$this->headLink()->prependStylesheet($this->assetUrl('css/style_original.css'));
 $this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka'));
 
 $this->headLink()->prependStylesheet('//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700');
@@ -55,15 +56,14 @@ $userBar = $this->userBar();
        <!--- end header------->
 
         <div class="clearfix"></div>
-        <div class="container">
-
-            <?php echo $this->content; ?>
-            
-           <!--- begin comment----->
-            <?php echo $this->partial('omeka/site/comment'); ?>
-           <!--- end comment------->
-
+        <div class="container recent_news">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 frm_left">
+                <div class="recent_news_frame_left">
+                    <?php echo $this->content; ?>
+            </div>
         </div>
+
+        <div class="clearfix"></div>
         <footer class="container page-footer font-small blue pt-4 m-5">
             <?php if ($footerContent = $this->themeSetting('footer')): ?>
             <?php echo $footerContent; ?>
