--- a/modules/Comment/view/common/comments-thread.phtml
+++ b/modules/Comment/view/common/comments-thread.phtml
@@ -8,14 +8,16 @@
 $partial = $this->plugin('partial');
 ?>
 
-<?php foreach ($comments as $comment) : ?>
-    <?php $parent = $comment->parent(); ?>
-    <?php if (($parent && $parent->id() == $parent_id) || (empty($parent) && empty($parent_id))): ?>
-    <div id="comment-<?= $comment->id() ?>" class="comment">
-        <?= $partial('common/comment-single', ['comment' => $comment]) ?>
-        <div class="comment-children">
-            <?= $partial('common/comments-thread', ['comments' => $comments, 'parent_id' => $comment->id()]) ?>
-        </div>
-    </div>
-    <?php endif; ?>
-<?php endforeach; ?>
+<div class="comments-thread">
+    <?php foreach ($comments as $comment) : ?>
+        <?php $parent = $comment->parent(); ?>
+        <?php if (($parent && $parent->id() == $parent_id) || (empty($parent) && empty($parent_id))): ?>
+            <div id="comment-<?= $comment->id() ?>" class="comment">
+                <?= $partial('common/comment-single', ['comment' => $comment]) ?>
+                <div class="comment-children">
+                    <?= $partial('common/comments-thread', ['comments' => $comments, 'parent_id' => $comment->id()]) ?>
+                </div>
+            </div>
+        <?php endif; ?>
+    <?php endforeach; ?>
+</div>
