--- a/themes/SimpleComment/view/omeka/site/item/show.phtml
+++ b/themes/SimpleComment/view/omeka/site/item/show.phtml
@@ -5,7 +5,8 @@ $this->htmlElement('body')->appendAttribute('class', 'item resource show');
 $embedMedia = $this->siteSetting('item_media_embed', false);
 $itemMedia = $item->media();
 ?>
-
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 frm_left">
+    <div class="recent_news_frame_left">
 <?php echo $this->pageTitle($item->displayTitle(), 2); ?>
 <h3><?php echo $translate('Item'); ?></h3>
 <?php $this->trigger('view.show.before'); ?>
@@ -73,3 +74,4 @@ $subjectValues = $item->displaySubjectValues($page, 25, $property);
 </div>
 <?php echo $this->showTags($resource); ?>
 <?php echo $this->showTaggingForm($resource); ?>
+</div>
