--- a/themes/SimpleComment/asset/css/style.css
+++ b/themes/SimpleComment/asset/css/style.css
@@ -631,6 +631,11 @@ body
 		float:none;
 		display:inline-block;
 	}
+	.mark_login
+	{
+		text-align:center;
+		float:none;
+	}
 	.btn_loginout
 	{
 		text-align:center;
