fini theme comment

--- a/themes/SimpleComment/asset/css/style.css
+++ b/themes/SimpleComment/asset/css/style.css
@@ -635,6 +635,11 @@ body
 	{
 		text-align:center;
 	}
+    .mark_login
+    {
+        float:none;
+        text-align:center;
+    }
 	.navbar-toggle
 	{
 		float: none;
