--- a/themes/SimpleComment/asset/css/comment.css
+++ b/themes/SimpleComment/asset/css/comment.css
@@ -120,6 +120,83 @@
     padding: 6px 12px;
 }
 
+.comment-reply {
+    font-weight: bold;
+    font-size: 12px;
+    padding: 6px 15px;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+    display: inline-block;
+    margin-bottom: 0;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    text-transform: uppercase;
+}
+
+.comment-reply:hover {
+    color:#fff;
+    background-color:#428bca;
+}
+
+.count-comment {
+    font-weight: bold;
+    font-size: 12px;
+    padding: 6px 15px;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 0;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+}
+
+.count-comment:hover {
+    color:#fff;
+    background-color:#eea236;
+}
+
+.comment-flag, .comment-unflag {
+    font-weight: bold;
+    font-size: 12px;
+    padding: 0px 15px;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+    display: inline-block;
+    margin-bottom: 0;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    text-transform: uppercase;
+}
+
+.comment-flag:hover, .comment-unflag:hover {
+    color:#fff;
+    background-color:#d43f3a;
+}
 
 
 
