--- a/themes/SimpleComment/view/common/comments-thread.phtml
+++ b/themes/SimpleComment/view/common/comments-thread.phtml
@@ -9,13 +9,19 @@ $partial = $this->plugin('partial');
 ?>
 
 <div class="comments-thread">
-    <?php foreach ($comments as $comment) : ?>
+    <?php
+        foreach ($comments as $comment) :
+    ?>
         <?php $parent = $comment->parent(); ?>
-        <?php if (($parent && $parent->id() == $parent_id) || (empty($parent) && empty($parent_id))): ?>
+        <?php
+            if (($parent && $parent->id() == $parent_id) || (empty($parent) && empty($parent_id))):
+        ?>
             <div id="comment-<?= $comment->id() ?>" class="comment">
-                <?= $partial('common/comment-single', ['comment' => $comment]) ?>
+                <?= $partial('common/comment-single', ['comment' => $comment, 'count' => count($comment->children())]) ?>
                 <div class="comment-children" style="padding-left: 28px;">
+                    <div class="collapse" id="replyOne<?= $comment->id() ?>">
                     <?= $partial('common/comments-thread', ['comments' => $comments, 'parent_id' => $comment->id()]) ?>
+                    </div>
                 </div>
             </div>
         <?php endif; ?>
