--- a/themes/SimpleComment/view/common/tagging-quick-form.phtml
+++ b/themes/SimpleComment/view/common/tagging-quick-form.phtml
@@ -18,6 +18,9 @@ $taggingForm->prepare();
     .tmp .inputs input[type="checkbox"]{
         margin-top: 10px;
     }
+    .field {
+        margin: 0px;
+    }
 </style>
 
 <div class="property">
