corriger_viewer_pdf

--- a/themes/SimpleComment/view/omeka/site/item/show.phtml
+++ b/themes/SimpleComment/view/omeka/site/item/show.phtml
@@ -43,6 +43,10 @@ $itemMedia = $item->media();
         scrollbar-color: rebeccapurple green;
         scrollbar-width: thin;
     }
+
+    .comment {
+        margin-left: 0px;
+    }
 </style>
 
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 frm_left">
