--- a/themes/SimpleComment/asset/css/comment.css
+++ b/themes/SimpleComment/asset/css/comment.css
@@ -163,6 +163,7 @@
     user-select: none;
     background-image: none;
     border: 1px solid transparent;
+    float: right;
 }
 
 .count-comment:hover {
