--- a/themes/SimpleComment/view/omeka/site/header.phtml
+++ b/themes/SimpleComment/view/omeka/site/header.phtml
@@ -6,7 +6,7 @@ $userBarComment = $this->userBar();
 $page_url = (isset($_SERVER['HTTPS']) ? "https" : "http") . "://$_SERVER[HTTP_HOST]/s/impressions-de-lire-ensemble";
 ?>
 
-<div class="container">
+<div class="container" style="padding-top: 5px;">
     <div class="col-lg-3 col-md-7 col-sm-5 col-xs-12">
         <div class="logo">
             <?php if ($this->themeSetting('logo')): ?>
