--- a/themes/SimpleComment/view/omeka/site/item/show.phtml
+++ b/themes/SimpleComment/view/omeka/site/item/show.phtml
@@ -12,14 +12,6 @@ $itemMedia = $item->media();
         text-transform: uppercase;
         margin: -30px 0 30px;
     }
-    #search {
-        top: 15px;
-        background-color: #fff;
-        border: 1px solid #dedede;
-        position: relative;
-        left: 0%;
-        padding: 7.5px;
-    }
     h3 {
         font-size: 15px;
         text-transform: uppercase;
@@ -38,7 +30,7 @@ $itemMedia = $item->media();
     }
 
     .scroller {
-        height: 380px;
+        height: 470px;
         overflow-y: scroll;
         scrollbar-color: rebeccapurple green;
         scrollbar-width: thin;
@@ -50,41 +42,9 @@ $itemMedia = $item->media();
 </style>
 
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 frm_left">
-    <div id="search">
-        <?php echo $this->partial('common/search-form'); ?>
-    </div>
-    <div class="recent_news_frame_left" style="padding-top: 15px;">
+    <div class="recent_news_frame_left">
 <?php echo $this->pageTitle($item->displayTitle(), 2); ?>
-<h3><?php echo $translate('Item'); ?></h3>
-<?php $this->trigger('view.show.before'); ?>
-<?php if ($embedMedia && $itemMedia): ?>
-    <div class="media-embeds">
-        <?php foreach ($itemMedia as $media):
-            echo $media->render();
-        endforeach;
-        ?>
-    </div>
-<?php endif; ?>
-<?php echo $item->displayValues(); ?>
-<div class="property">
-    <?php $itemSets = $item->itemSets(); ?>
-    <?php if (count($itemSets) > 0): ?>
-        <h4><?php echo $translate('Item sets'); ?></h4>
-        <?php foreach ($itemSets as $itemSet): ?>
-            <div class="value"><a href="<?php echo $escape($itemSet->url()); ?>"><?php echo $itemSet->displayTitle(); ?></a></div>
-        <?php endforeach; ?>
-    <?php endif; ?>
-</div>
-<?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
-    <div class="property">
-        <h4><?php echo $translate('Site pages'); ?></h4>
-        <div class="values">
-            <?php foreach ($sitePages as $sitePage): ?>
-                <div class="value"><?php echo $sitePage->link($sitePage->title()); ?></div>
-            <?php endforeach; ?>
-        </div>
-    </div>
-<?php endif; ?>
+
 <?php if (!$embedMedia && $itemMedia): ?>
     <div class="media-list">
         <?php foreach ($itemMedia as $media): ?>
@@ -92,19 +52,8 @@ $itemMedia = $item->media();
         <?php endforeach; ?>
     </div>
 <?php endif; ?>
-
-<?php
-$page = $this->params()->fromQuery('page', 1);
-$property = $this->params()->fromQuery('property');
-$subjectValues = $item->displaySubjectValues($page, 25, $property);
-?>
-<?php if ($subjectValues): ?>
-    <div id="item-linked">
-        <h3><?php echo $translate('Linked resources'); ?></h3>
-        <?php echo $subjectValues; ?>
-    </div>
-<?php endif; ?>
-    <?php echo $this->annotations($resource); ?>
+    <div style="padding-top: 15px"></div>
+    <?php echo $this->universalViewer($resource); ?>
 </div>
 </div>
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 frm_right">
@@ -131,6 +80,5 @@ $subjectValues = $item->displaySubjectValues($page, 25, $property);
 <div class="container">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <!-- autre functions-->
-        <?php echo $this->universalViewer($resource); ?>
     </div>
 </div>
