--- a/themes/SimpleComment/view/omeka/site/header.phtml
+++ b/themes/SimpleComment/view/omeka/site/header.phtml
@@ -2,19 +2,17 @@
 $escape = $this->plugin('escapeHtml');
 $siteTitle = $site->title();
 $userBarComment = $this->userBar();
-
-$page_url = (isset($_SERVER['HTTPS']) ? "https" : "http") . "://$_SERVER[HTTP_HOST]/s/impressions-de-lire-ensemble";
 ?>
 
 <div class="container" style="padding-top: 5px;">
     <div class="col-lg-3 col-md-7 col-sm-5 col-xs-12">
         <div class="logo">
             <?php if ($this->themeSetting('logo')): ?>
-                <a href="<?= $page_url ?>">
+                <a href="<?php echo $site->url(); ?>">
                     <img src="<?php echo $this->themeSettingAssetUrl('logo'); ?>" alt="<?php echo $escape($siteTitle); ?>" />
                 </a>
             <?php else: ?>
-                <a href="<?= $page_url ?>" class="site-title">
+                <a href="<?php echo $site->url(); ?>" class="site-title">
                     <h1><?php echo $escape($siteTitle); ?></h1>
                 </a>
             <?php endif; ?>
