--- a/themes/SimpleComment/view/omeka/site/item/show.phtml
+++ b/themes/SimpleComment/view/omeka/site/item/show.phtml
@@ -30,7 +30,7 @@ $itemMedia = $item->media();
     }
 
     .scroller {
-        height: 470px;
+        height: 500px;
         overflow-y: scroll;
         scrollbar-color: rebeccapurple green;
         scrollbar-width: thin;
@@ -38,6 +38,11 @@ $itemMedia = $item->media();
 
     .comment {
         margin-left: 0px;
+    }
+
+
+    .uv .headerPanel .centerOptions .search .searchText {
+        color: #565656;
     }
 </style>
 
