--- a/themes/SimpleComment/view/SimpleComment/stats.phtml
+++ b/themes/SimpleComment/view/SimpleComment/stats.phtml
@@ -1,5 +1,58 @@
 <?php
-$stats = $this->commentStats("10");
-foreach ($stats as $c) {
-    echo $c->body().'<br/>';
-}
+$stats = $this->commentStats("all");
+?>
+
+<div class="container-fluid" style="padding-top: 20px;">
+    <div class="col col-md-12">
+        <div class="row">
+            <div class="col col-md-12">
+                <h4>Commentaires Stats:</h4>
+                Qui commentent le plus: <?= $stats['nom_qui_comment_plus'] ?><span class="pull-right strong">100%</span>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="<?= $stats['rate_qui_comment_plus'] ?>"aria-valuemin="0" aria-valuemax="100" style="width:<?= $stats['rate_qui_comment_plus'] ?>%"><?= $stats['rate_qui_comment_plus'] ?>%</div>
+                </div>
+                Les items ont été commentés par <?= $stats['nom_qui_comment_plus'] ?>: <br/>
+                <?php
+                foreach ($stats['arr_id_items_qui'][$stats['nom_qui_comment_plus']] as $item) {
+                ?>
+                    <a href="<?= $item['path'] ?>"> <?= $item['title'] ?> </a><br/>
+                <?php
+                }
+                ?>
+                <br/>
+                Quels items sont le plus commentés: <?= $stats['nom_item_comment_plus'] ?><span class="pull-right strong">100%</span>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<?= $stats['rate_item_comment_plus'] ?>"aria-valuemin="0" aria-valuemax="100" style="width:<?= $stats['rate_item_comment_plus'] ?>%"><?= $stats['rate_item_comment_plus'] ?>%</div>
+                </div>
+                Items sont le plus commentés:
+                <br/>
+                <?php
+                foreach ($stats['arr_id_items_item'] as $item) {
+                    if ($item['id'] == $stats['nom_item_comment_plus']) {
+                    ?>
+                        <a href="<?= $item['path'] ?>"> <?= $item['title'] ?> </a><br/>
+                    <?php
+                    }
+                }
+                ?>
+                <br/>
+                Quels commentaires ont le plus de reply: <?= strlen($stats['nom_reply_comment_plus']) > 50 ? substr($stats['nom_reply_comment_plus'], 1, 50)."..." : $stats['nom_reply_comment_plus'] ?><span class="pull-right strong">100%</span>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="<?= $stats['rate_reply_comment_plus'] ?>"aria-valuemin="0" aria-valuemax="100" style="width:<?= $stats['rate_reply_comment_plus'] ?>%"><?= $stats['rate_reply_comment_plus'] ?>%</div>
+                </div>
+                Item qui contient ce commentaire est:
+                <br/>
+                <?php
+                foreach ($stats['arr_id_items_reply'] as $item) {
+                    if (strcmp($item['comment'], $stats['nom_reply_comment_plus']) == 0) {
+                ?>
+                    <a href="<?= $item['path'] ?>"> <?= $item['title'] ?> </a><br/>
+                <?php
+                    }
+                }
+                ?>
+            </div>
+        </div>
+    </div>
+</div>
+
