--- a/themes/SimpleComment/view/common/user-bar.phtml
+++ b/themes/SimpleComment/view/common/user-bar.phtml
@@ -23,6 +23,9 @@ $activePage = $nav->findActive($container);
         border: 1px solid #dedede;
         padding: 7.5px;
         width: 300px;
+        float: right;
+        position: unset;
+        margin-top: 5px;
     }
     @media screen and (max-width:767px)
     {
@@ -33,6 +36,7 @@ $activePage = $nav->findActive($container);
             padding: 7.5px;
             width: 300px;
             margin:auto;
+            float: none;
         }
     }
     #user-bar {
@@ -158,7 +162,7 @@ $activePage = $nav->findActive($container);
             </div>
         </div>
     <?php endif; ?>
-    <div class="col-lg-7 col-md-3 col-sm-4 col-xs-12">
+    <div class="col-lg-9 col-md-5 col-sm-7 col-xs-12">
         <div id="search">
             <?php echo $this->partial('common/search-form'); ?>
         </div>
@@ -180,7 +184,7 @@ $activePage = $nav->findActive($container);
                 <?php
                 foreach($container as $page):
                 ?>
-                <li class="nav-item <?php if($activePage && $page->label == $activePage['page']->label) echo 'current_page_item current-menu-item';?>" style="padding: 25px 20px 0px 0px;">
+                <li class="nav-item <?php if($activePage && $page->label == $activePage['page']->label) echo 'current_page_item current-menu-item';?>" style="padding: 20px 20px 0px 0px;">
                     <div class="nav-link">
                         <?php echo $this->navigation()->menu()->htmlify($page) . PHP_EOL; ?>
                     </div>
