--- a/themes/SimpleComment/view/omeka/site/item/show.phtml
+++ b/themes/SimpleComment/view/omeka/site/item/show.phtml
@@ -30,8 +30,12 @@ $itemMedia = $item->media();
         font-size: 15px;
     }
 
+    h2 {
+        margin: 0px;
+    }
+
     .scroller {
-        height: 500px;
+        height: 305px;
         overflow-y: scroll;
         scrollbar-color: rebeccapurple green;
         scrollbar-width: thin;
@@ -41,24 +45,16 @@ $itemMedia = $item->media();
         margin-left: 0px;
     }
 
-
     .uv .headerPanel .centerOptions .search .searchText {
         color: #565656;
     }
 </style>
-
+<div class="container" style="padding-top: 20px;">
+    <?php echo $this->pageTitle($item->displayTitle(), 2); ?>
+</div>
 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 frm_left">
     <div class="recent_news_frame_left">
-<?php echo $this->pageTitle($item->displayTitle(), 2); ?>
-
-<?php if (!$embedMedia && $itemMedia): ?>
-    <div class="media-list">
-        <?php foreach ($itemMedia as $media): ?>
-            <?php echo $media->linkPretty(); ?>
-        <?php endforeach; ?>
-    </div>
-<?php endif; ?>
-    <div style="padding-top: 15px"></div>
+    <div style="padding-top: 13px;"></div>
     <?php echo $this->universalViewer($resource); ?>
 </div>
 </div>
@@ -82,9 +78,4 @@ $itemMedia = $item->media();
         </div>
     </div>
 </div>
-<div class="clearfix" style="padding-top: 80px;"></div>
-<div class="container">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <!-- autre functions-->
-    </div>
-</div>
+
